--- a/source/_posts/大美利坚，人类的希望，宣示效忠。。我来了。。.md
+++ b/source/_posts/大美利坚，人类的希望，宣示效忠。。我来了。。.md
@@ -3,6 +3,4 @@ title: 大美利坚，人类的希望，宣示效忠。。我来了。。
 date: 2017-08-11 19:53:44
 tags:
 ---
-     今天学校组织到化工厂参观，参观到实验室时，负责人说不让拍照，我立刻拍了一张，这家工厂是一家兵工厂，好像对解放军还挺重要，好多防毒面具啥的都是他们生产的，作为一个美分，我怎么能错过这么一个好机会，麻利的拍完照收好手机，神不知鬼不觉。
-
-           现在要考虑的问题是什么时候去美国大使馆提供这份重要的情报，这是实现我带路梦想的大好机会，大美利坚，人类的希望，宣示效忠。。我来了。。
+>今天学校组织到化工厂参观，参观到实验室时，负责人说不让拍照，我立刻拍了一张，这家工厂是一家兵工厂，好像对解放军还挺重要，好多防毒面具啥的都是他们生产的，作为一个美分，我怎么能错过这么一个好机会，麻利的拍完照收好手机，神不知鬼不觉。现在要考虑的问题是什么时候去美国大使馆提供这份重要的情报，这是实现我带路梦想的大好机会，大美利坚，人类的希望，宣示效忠。。我来了。。
